--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 }
 .card{
   border: 1px solid;
-  height: 820px;
+  height: 620px;
   width: 356px;
   border-radius: 2rem;
 }
@@ -55,7 +55,9 @@ footer{
     right: 28rem;
     /* cursor: pointer; */
   }
-
+.border{
+  border: 1px solid yellow;
+}
   /*
   Not finish yet 
   */
