--- a/style.css
+++ b/style.css
@@ -48,6 +48,22 @@ main button {
 .location {
   font-size: 100px;
 }
+.Availiable,
+.Availiable1,
+.Availiable2 {
+  top: 5px;
+  position: relative;
+  /* color: #ec407a; */
+}
+.Availiable {
+  color: #ec407a;
+}
+.Availiable1 {
+  color: rebeccapurple;
+}
+.Availiable2 {
+  color: green;
+}
 .small-sect {
   display: flex;
   align-items: center;
@@ -65,18 +81,27 @@ footer {
   margin: 0;
 }
 .mitan1 {
-  color: #ec407a;
+  cursor: pointer;
+  color: rebeccapurple;
   position: relative;
-  left: 7rem;
+  left: 5.5rem;
 }
 .mitan2 {
-  color: #4e4649;
+  cursor: pointer;
+
   position: relative;
   top: -12.26rem;
   right: 5rem;
 }
+.mitan2 p {
+  color: black;
+}
+
+.mitan2 p span {
+  color: rebeccapurple;
+}
 .border {
-  border: 1px solid yellow;
+  border: 4px solid yellow;
 }
 .date {
   display: flex;
@@ -114,7 +139,7 @@ footer {
 .screen {
   color: gray;
   position: relative;
-  right: -1rem;
+  right: -0.5rem;
   padding: 10px;
 }
 .date2 span {
@@ -128,4 +153,21 @@ footer {
 .total span {
   position: relative;
   left: 1.8rem;
+}
+
+.seats.pink {
+  color: #ec407a;
+}
+.mitan1 span.black,
+.mitan2 span.black {
+  color: green;
+}
+.arrow {
+  cursor: pointer;
+}
+.arrow:hover {
+  color: green;
+}
+.btn:hover {
+  opacity: 0.7;
 }
