--- a/style.css
+++ b/style.css
@@ -4,12 +4,15 @@
   padding: 0;
 }
 body {
+  background-image: url("https://images.unsplash.com/photo-1517604931442-7e0c8ed2963c?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: rgb(121, 114, 114);
   /* color: white; */
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 90vh;
+  height: 100vh;
 }
 .card {
   height: 620px;
