--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
   padding: 0;
 }
 body {
+  font-family: sans-serif;
   background-image: url("https://images.unsplash.com/photo-1517604931442-7e0c8ed2963c?q=80&w=1170&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
   background-repeat: no-repeat;
   background-size: cover;
@@ -155,7 +156,7 @@ footer {
 }
 .total span {
   position: relative;
-  left: 1.8rem;
+  left: 2rem;
 }
 
 .seats.pink {
